--- a/Time Management/src/edu/westga/cs3211/time_management/view/MainWindow.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/MainWindow.fxml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="600.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.MainWindow">
+<AnchorPane minHeight="451.0" minWidth="574.0" prefHeight="468.0" prefWidth="578.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.MainWindow">
    <children>
-      <Button layoutX="561.0" layoutY="38.0" mnemonicParsing="false" onAction="#addEvent" text="+" />
-      <ListView fx:id="eventList" layoutX="293.0" layoutY="38.0" onMouseClicked="#selectEvent" prefHeight="549.0" prefWidth="268.0" />
-      <TextArea fx:id="eventDetailsText" layoutX="14.0" layoutY="38.0" prefHeight="549.0" prefWidth="268.0" />
+      <ListView fx:id="eventList" layoutX="296.0" layoutY="38.0" onMouseClicked="#selectEvent" prefHeight="374.0" prefWidth="268.0" />
+      <TextArea fx:id="eventDetailsText" layoutX="14.0" layoutY="38.0" prefHeight="374.0" prefWidth="268.0" />
       <Label layoutX="86.0" layoutY="6.0" text="Event Details">
          <font>
             <Font size="22.0" />
@@ -26,5 +21,7 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Button fx:id="updateEventButton" layoutX="14.0" layoutY="429.0" mnemonicParsing="false" text="Update Event" />
+      <Button fx:id="addEventButton" layoutX="493.0" layoutY="429.0" mnemonicParsing="false" text="Add Event" />
    </children>
 </AnchorPane>
