--- a/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="244.0" minWidth="314.0" prefHeight="245.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.AddEvent">
+
+<AnchorPane prefHeight="245.0" prefWidth="314.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
    <children>
       <Label fx:id="nameLabel" layoutX="17.0" layoutY="18.0" text="Name:" />
       <Label fx:id="startTimeLabel" layoutX="17.0" layoutY="49.0" text="Start Time*:" />
@@ -16,7 +17,7 @@
       <Label fx:id="locationLabel" layoutX="17.0" layoutY="143.0" text="Location:" />
       <Label fx:id="descriptionLabel" layoutX="17.0" layoutY="174.0" text="Description:" />
       <Button fx:id="cancelButton" layoutX="18.0" layoutY="208.0" mnemonicParsing="false" text="Cancel" />
-      <Button fx:id="addEventButton" layoutX="213.0" layoutY="208.0" mnemonicParsing="false" text="Add Event" />
+      <Button fx:id="updateEventButton" layoutX="213.0" layoutY="208.0" mnemonicParsing="false" text="Update Event" />
       <TextField fx:id="nameTextField" layoutX="116.0" layoutY="14.0" prefWidth="185.0" />
       <DatePicker fx:id="startTimeDatePicker" layoutX="168.0" layoutY="45.0" prefHeight="25.0" prefWidth="133.0" />
       <DatePicker fx:id="endTimeDatePicker" layoutX="168.0" layoutY="77.0" prefHeight="25.0" prefWidth="133.0" />
