--- a/Time Management/src/edu/westga/cs3211/time_management/view/ConfirmEvent.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/ConfirmEvent.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane minHeight="245.0" minWidth="314.0" prefHeight="245.0" prefWidth="314.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+<AnchorPane minHeight="245.0" minWidth="314.0" prefHeight="245.0" prefWidth="314.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="edu.westga.cs3211.time_management.view.ConfirmEvent">
    <children>
       <Label fx:id="nameLabel" layoutX="17.0" layoutY="18.0" text="Name:" />
       <Label fx:id="startTimeLabel" layoutX="17.0" layoutY="49.0" text="Start Time*:" />
