--- a/Time Management/src/edu/westga/cs3211/time_management/view/MainWindow.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/MainWindow.fxml
@@ -21,7 +21,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Button fx:id="updateEventButton" layoutX="14.0" layoutY="429.0" mnemonicParsing="false" text="Update Event" />
-      <Button fx:id="addEventButton" layoutX="493.0" layoutY="429.0" mnemonicParsing="false" text="Add Event" />
+      <Button fx:id="updateEventButton" layoutX="14.0" layoutY="429.0" mnemonicParsing="false" onAction="#updateEvent" text="Update Event" />
+      <Button fx:id="addEventButton" layoutX="493.0" layoutY="429.0" mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
    </children>
 </AnchorPane>
