--- a/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
@@ -16,8 +16,8 @@
       <Label fx:id="visibilityLabel" layoutX="17.0" layoutY="111.0" text="Visibility*:" />
       <Label fx:id="locationLabel" layoutX="17.0" layoutY="143.0" text="Location:" />
       <Label fx:id="descriptionLabel" layoutX="17.0" layoutY="174.0" text="Description:" />
-      <Button fx:id="cancelButton" layoutX="18.0" layoutY="208.0" mnemonicParsing="false" text="Cancel" />
-      <Button fx:id="updateEventButton" layoutX="213.0" layoutY="208.0" mnemonicParsing="false" text="Update Event" />
+      <Button fx:id="cancelButton" layoutX="18.0" layoutY="208.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+      <Button fx:id="updateEventButton" layoutX="213.0" layoutY="208.0" mnemonicParsing="false" onAction="#updateEvent" text="Update Event" />
       <TextField fx:id="nameText" layoutX="116.0" layoutY="14.0" prefWidth="185.0" />
       <DatePicker fx:id="startTimeDate" layoutX="168.0" layoutY="45.0" prefHeight="25.0" prefWidth="133.0" />
       <DatePicker fx:id="endTimeDate" layoutX="168.0" layoutY="77.0" prefHeight="25.0" prefWidth="133.0" />
