--- a/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="245.0" prefWidth="314.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="edu.westga.cs3211.time_management.view.UpdateEvent">
+<AnchorPane prefHeight="245.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.UpdateEvent">
    <children>
       <Label fx:id="nameLabel" layoutX="17.0" layoutY="18.0" text="Name:" />
       <Label fx:id="startTimeLabel" layoutX="17.0" layoutY="49.0" text="Start Time*:" />
@@ -18,11 +17,11 @@
       <Label fx:id="descriptionLabel" layoutX="17.0" layoutY="174.0" text="Description:" />
       <Button fx:id="cancelButton" layoutX="18.0" layoutY="208.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
       <Button fx:id="updateEventButton" layoutX="213.0" layoutY="208.0" mnemonicParsing="false" onAction="#updateEvent" text="Update Event" />
-      <TextField fx:id="nameText" layoutX="116.0" layoutY="14.0" prefWidth="185.0" />
+      <TextField fx:id="nameText" layoutX="116.0" layoutY="14.0" prefWidth="185.0" promptText="Christmas" />
       <DatePicker fx:id="startTimeDate" layoutX="168.0" layoutY="45.0" prefHeight="25.0" prefWidth="133.0" />
       <DatePicker fx:id="endTimeDate" layoutX="168.0" layoutY="77.0" prefHeight="25.0" prefWidth="133.0" />
       <ComboBox fx:id="visibilityList" layoutX="168.0" layoutY="107.0" prefHeight="25.0" prefWidth="133.0" />
-      <TextField fx:id="locationText" layoutX="152.0" layoutY="139.0" />
-      <TextField fx:id="descriptionText" layoutX="152.0" layoutY="170.0" />
+      <TextField fx:id="locationText" layoutX="152.0" layoutY="139.0" promptText="The North Pole" />
+      <TextField fx:id="descriptionText" layoutX="152.0" layoutY="170.0" promptText="The Christmas Party" />
    </children>
 </AnchorPane>
