--- a/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
+++ b/Time Management/src/edu/westga/cs3211/time_management/view/UpdateEvent.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="245.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.UpdateEvent">
+<AnchorPane prefHeight="245.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/8.0.161-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.westga.cs3211.time_management.view.UpdateEvent">
    <children>
       <Label fx:id="nameLabel" layoutX="17.0" layoutY="18.0" text="Name*:" />
       <Label fx:id="startTimeLabel" layoutX="17.0" layoutY="49.0" text="Start Time*:" />
